--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,8 +38,8 @@ jobs:
       uses: docker/login-action@v1
       with:
         registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+        username: ${{ github.repository_owner }}
+        password: ${{ secrets.CONTAINER_REGISTRY_PAT }}
     
     - name: Build and push Docker image
       uses: docker/build-push-action@v2
@@ -60,4 +60,3 @@ jobs:
       run: |
         echo "Deploy your application here"
         # Add deployment steps based on your hosting platform
-        # For example, deploy to Azure, AWS, or GCP
