--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,11 +21,12 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r src/requirements.txt
+        pip install -e .
     
     - name: Run tests
       run: |
-        pytest tests/
-
+        pytest tests/ -v
+    
   build-and-push:
     needs: test
     runs-on: ubuntu-latest
