--- a/DockerFile
+++ b/DockerFile
@@ -1,9 +1,10 @@
 FROM python:3.9-slim
 
 WORKDIR /app
-COPY src/requirements.txt .
-RUN pip install -r requirements.txt
-COPY src/ .
+COPY . .
+RUN pip install --upgrade pip && \
+    pip install -r src/requirements.txt && \
+    pip install -e .
 
 EXPOSE 8501
-ENTRYPOINT ["streamlit", "run", "app.py"]
+ENTRYPOINT ["streamlit", "run", "src/app.py"]
