--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,12 +20,13 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        python -m pip install pytest
         pip install -r src/requirements.txt
         pip install -e .
     
     - name: Run tests
       run: |
-        pytest tests/ -v
+        python -m pytest tests/ -v
     
   build-and-push:
     needs: test
