--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,6 +1,8 @@
-numpy==1.24.3
-pandas==2.0.3
-scikit-learn==1.3.0
-streamlit==1.25.0
-pytest==7.4.0
-joblib==1.3.1
+numpy>=1.24.3
+pandas>=2.0.3
+scikit-learn>=1.3.0
+streamlit>=1.25.0
+pytest>=7.4.0
+joblib>=1.3.1
+setuptools>=42
+wheel>=0.37.0
